pkgcore-checks Release Notes
============================

See ChangeLog for full commit logs; this is summarized and major changes.

* 0.x.x

* update to use snakeoil api.


0.3.4:

* treat pkg.restrict as a depset.


0.3.3:

* drop digest specific checks; portage now prunes digests on sync regardless 
  of whether or not the repo is m2 pure; thus, no way to detect if a missing
  digest is actually a screwup in the repo, or if it's portage being 'special'.
  May re-add the checks down the line, currently however removing them for
  the common case.

* back down check for files directory if manifest2; manifest2 glep didn't
  specify that files directory could be dropped, but portage has deviated there.
  Since been backed down, but getting ahead so we don't need an intermediate
  release when they try it again.

* added check for missing metadata.xml; refactored common error class selection
  logic into base class.


0.3.2:

* correct tracebacks when dealing with a few result objects from repo_metadata


0.3.1:

* makes StaleUnstable abide by --arches; ticket 59 (thanks leio).
* stop complaining about empty keywords, since they're now allowed instead of
  using -*.


0.3:

* heavy refactoring of reporter subsystem, and clean up of check results.
  Better messages, better output for normal usage.  to_xml() methods were
  dropped (XmlReporter handles it on it's own), same for to_str() in favor
  of short_desc and long_desc attributes.
* whitespace checks now output one result for each classification for an
  ebuild, instead of emitting reports for each line.
* all remaining 'info' statements are pushed to stderr now.
* new PickleStream reporter; used to serialize check results, and flush the
  stream out stdout.  If you need to get at the data generated, this is the
  sanest way to do it (alternatives require trying to deserialize what a 
  reporter does, thus losing data).
* added new tool replay-pcheck-stream; used to replay a pickle stream through